[project]
name = "linuxdobrowser"
version = "0.1.0"
description = "LinuxDoBrowser is a Python tool for automating web browsing on the linux.do forum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drissionpage>=4.1.0.18",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
