[project]
name = "linuxdobrowser"
version = "0.1.1"
description = "LinuxDoBrowser is a Python tool for automating web browsing on the linux.do forum"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["drissionpage>=4.1.1.1"]

[project.optional-dependencies]
dev = ["mypy>=1.17.0"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
